hphp/hack/test/typecheck/new_inference/instance_method_then_invoke.php.constraint_method_call.exp
ERROR: File "instance_method_then_invoke.php", line 7, characters 25-25:
This generic parameter is redundant because it only appears in a covariant (output) position. Consider replacing uses of generic parameter with `nothing` or specifying `<<__Explicit>>` on the generic parameter (Typing[4366])
